--- a/files/TFE.bib
+++ b/files/TFE.bib
@@ -177,6 +177,14 @@
   file = {C\:\\Users\\maxen\\Zotero\\storage\\PF3WJHQ9\\Atteindre-son-point-de-confort.html}
 }
 
+@misc{ghesquiere2021,
+  title = {Catalogue Des Indicateurs Statistiques - {{WALSTAT}}},
+  author = {Ghesquiere, Fran{\c c}ois},
+  year = {2021},
+  howpublished = {https://walstat.iweps.be/walstat-catalogue.php?niveau\_agre=A\&indicateur\_id=833800\&ordre=0\&periode=2019\&niveau\_agre=P\&sel\_niveau\_catalogue=T},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\6Q4S9D8X\\walstat-catalogue.html}
+}
+
 @article{goldstein2019,
   title = {Managing the Risk of Venous Thromboembolism in Transgender Adults Undergoing Hormone Therapy},
   author = {Goldstein, Zil and Khan, Musaub and Reisman, Tamar and Safer, Joshua D},
@@ -559,6 +567,14 @@
   file = {C\:\\Users\\maxen\\Zotero\\storage\\XCSNH89U\\McNeil et al. - 2012 - Trans Mental Health and Emotional Wellbeing Study.pdf}
 }
 
+@misc{meulders2022,
+  title = {{{MDRDs}} - {{CKD-EPI}} - {{Cockcroft}} | {{SFNDT}}},
+  author = {Meulders, Quentin},
+  year = {2022},
+  howpublished = {https://www.sfndt.org/professionnels/calculateurs/mdrds-ckd-epi-cockcroft},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\J96VT6LH\\mdrds-ckd-epi-cockcroft.html}
+}
+
 @article{meyer2003,
   title = {Prejudice, Social Stress, and Mental Health in Lesbian, Gay, and Bisexual Populations: {{Conceptual}} Issues and Research Evidence.},
   author = {Meyer, Ilan H.},
@@ -853,6 +869,18 @@
   file = {C\:\\Users\\maxen\\Zotero\\storage\\9TFTA7U2\\Seelman et al_2020_Trans Men’s Access to Knowledgeable Providers and Their Experiences in Health.pdf;C\:\\Users\\maxen\\Zotero\\storage\\UIKW3I7M\\6042986.html}
 }
 
+@misc{servicepublicfederaldejustice2007,
+  title = {{Loi du 10/05/2007 relative a la transsexualite}},
+  author = {{Service Public F\'ed\'eral de Justice}},
+  year = {2007},
+  month = may,
+  publisher = {{Moniteur Belge}},
+  abstract = {10 MAI 2007. - Loi relative \`a la transsexualit\'e ALBERT II, Roi des Belges, A tous, pr\'esents et \`a venir, Salut. Les Chambres ont adopt\'e et Nous sanctionnons ce qui suit : CHAPITRE Ier. - Disposition g\'en\'erale Article 1er. La pr\'esente loi r\`egle une mati\`ere vis\'ee \`a l'article 78 de la Constitution. CHAPITRE II. - Modifications du Code civil Art. 2. Dans le livre Ier, titre II, chapitre II, du Code civil, il est ins\'er\'e un article 62bis, libell\'e comme suit : \guillemotleft{} Art. 62bis.\textsection{} 1er. Tout Belge ou tout \'etranger inscrit aux registres de la population qui a la conviction intime, constante et irr\'eversible d'appar(...)},
+  howpublished = {https://etaamb.openjustice.be/fr/loi-du-10-mai-2007\_n2007009570.html},
+  langid = {french},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\464RMNQN\\loi-du-10-mai-2007_n2007009570.html}
+}
+
 @article{shankaranarayana2021,
   title = {Optimal Injection Interval for Testosterone Undecanoate Treatment of Hypogonadal and Transgender Men},
   author = {Shankara Narayana, Nandini and Ly, Lam P and Jayadev, Veena and Fennell, Carolyn and Savkovic, Sasha and Conway, Ann J and Handelsman, David J},
@@ -903,6 +931,23 @@
   abstract = {Transgender patients report negative experiences in health care settings, but little is known about clinicians' willingness to see transgender patients. We surveyed 308 primary care clinicians in an integrated Midwest health system and 53\% responded. Most respondents were willing to provide routine care to transgender patients (85.7\%) and Papanicolaou (Pap) tests (78.6\%) to transgen-der men. Willingness to provide routine care decreased with age; willingness to provide Pap tests was higher among family physicians, those who had met a transgender person, and those with lower transphobia. Medical education should address professional and personal factors related to caring for the transgender population to increase access. Ann Fam Med 2018;16:555-558. https://doi.org/10.1370/afm.2298.},
   keywords = {Healthcare access,Transgender men,Transgender people},
   file = {C\:\\Users\\maxen\\Zotero\\storage\\LIR5TXRL\\Shires et al. - 2018 - Primary Care Clinicians’ Willingness to Care for Transgender Patients.pdf}
+}
+
+@article{sorelle2019,
+  title = {Impact of {{Hormone Therapy}} on {{Laboratory Values}} in {{Transgender Patients}}},
+  author = {SoRelle, Jeffrey A and Jiao, Rhoda and Gao, Emily and Veazey, Jonas and Frame, Ithiel and Quinn, Andrew M and Day, Philip and Pagels, Patti and Gimpel, Nora and Patel, Khushbu},
+  year = {2019},
+  month = jan,
+  journal = {Clinical Chemistry},
+  volume = {65},
+  number = {1},
+  pages = {170--179},
+  issn = {0009-9147, 1530-8561},
+  doi = {10.1373/clinchem.2018.292730},
+  abstract = {BACKGROUND: For transgender individuals taking hormone therapy (HT), data on laboratory values are limited, and the effects on laboratory values cannot be easily predicted. We evaluated the impact on common laboratory analytes in transgender individuals before and after initiation of HT. METHODS: We conducted a retrospective chart review of transgender patients identified at transgender-specific clinics at an urban county hospital and community clinic. Laboratory data were collected on hormone concentrations, hematologic parameters, electrolytes, lipids, and liver and renal markers before and after initiation of HT. RESULTS: We identified 183 transgender women (TW) and 119 transgender men (TM) for whom laboratory data were available. In all, 87 TW and 62 TM had baseline laboratory data, and data were also available for 133 TW and 89 TM on HT for Ͼ6 months. The most significant changes were seen in red blood cell count, hemoglobin concentration, hematocrit, and creatinine levels after Ͼ6 months of HT, which increased in TM and decreased in TW after HT (P Ͻ 0.005; d index Ͼ 0.6). Alkaline phosphatase, aspartate aminotransferase, and alanine aminotransferase levels increased in TM; however, the effect size was small (d index Ͻ 0.5). Calcium, albumin, and alkaline phosphatase levels significantly decreased in TW (P Ͻ 0.001; d Ͼ 0.6). Additionally, TM were found to have increased triglycerides and decreased HDL levels (P Ͻ 0.005; d Ͼ 0.6). CONCLUSIONS: Changes occur in several common laboratory parameters for patients on HT. Some laboratory values changed to match the gender identity, whereas others remained unchanged or were intermediate from the baseline values. These findings will help guide interpretation of laboratory test results in transgender patients taking HT.},
+  langid = {english},
+  keywords = {Monitoring,THAG,Transgender men,Transgender people,Transgender women},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\IGU45MAC\\SoRelle et al. - 2019 - Impact of Hormone Therapy on Laboratory Values in .pdf}
 }
 
 @article{taub2020,
@@ -1006,6 +1051,22 @@
   file = {C\:\\Users\\maxen\\Zotero\\storage\\4SQCP8UE\\Van Lisdonk - 2014 - Living with intersexDSD An exploratory study of the social situation of persons with intersexDSD.pdf}
 }
 
+@article{Velho2017,
+  title = {Effects of Testosterone Therapy on {{BMI}}, Blood Pressure, and Laboratory Profile of Transgender Men: A Systematic Review},
+  author = {Velho, I. and Fighera, T. M. and Ziegelmann, P. K. and Spritzer, P. M.},
+  year = {2017},
+  journal = {Andrology},
+  volume = {5},
+  number = {5},
+  pages = {881--888},
+  issn = {20472927},
+  doi = {10.1111/andr.12382},
+  abstract = {Testosterone is the main hormonal agent used for cross-sex hormone therapy in female-to-male transgender persons. Our aim was to systematically review the literature concerning the effects of testosterone on body mass index (BMI), blood pressure, hematocrit, hemoglobin, lipid profile, and liver enzymes in transgender men. PUBMED and EMBASE were searched for studies published until March 2017. Studies were included if they reported interventions with any dose of testosterone and comparison of variables before and during treatment. Of 455 potentially eligible articles, 13 were reviewed. Study duration ranged from 6 to 60 months, sample size ranged from 12 to 97 patients, and the most common treatment was parenteral testosterone undecanoate 1000 mg/12 weeks. Slight but significant increases in BMI were reported (from 1.3 to 11.4\%). Three out of seven studies assessing the impact of different testosterone formulations on blood pressure detected modest increases or clinically irrelevant changes in this variable. In another study, however, two patients developed hypertension, which was resolved after cessation of testosterone therapy. Decreases in HDL-cholesterol and increases in LDL-cholesterol were consistently observed. Eight studies observed a relationship between testosterone and increased hemoglobin (range: 4.9\textendash 12.5\%) and hematocrit (range: 4.4\textendash 17.6\%), but discontinuation of androgen therapy was not necessary. In one study, two patients developed erythrocytosis (hematocrit {$>$}52\%) after 9 and 12 months of treatment. One study analyzing testosterone formulations observed smaller increases in hemoglobin and hematocrit with testosterone gel. Six studies assessing liver function showed slight or no changes. Overall, the quality of evidence was low, given the lack of randomized clinical/controlled trials and the small sample sizes. In conclusion, exogenous testosterone administration to transgender men was associated with modest increases in BMI, hemoglobin/hematocrit, and LDL-cholesterol, and with decreases in HDL-cholesterol. Long-term studies are needed to assess the long-term risks of testosterone therapy, particularly as they relate to cardiometabolic risks such as diabetes, dyslipidemia and the metabolic syndrome.},
+  pmid = {28709177},
+  keywords = {Effets indésirables,Monitoring,THAG,Transgender men,Transgender people},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\LAZ7LML6\\Velho et al. - 2017 - Effects of testosterone therapy on BMI, blood pres.pdf}
+}
+
 @article{vonelm2014,
   title = {The {{Strengthening}} the {{Reporting}} of {{Observational Studies}} in {{Epidemiology}} ({{STROBE}}) {{Statement}}: {{Guidelines}} for Reporting Observational Studies},
   shorttitle = {The {{Strengthening}} the {{Reporting}} of {{Observational Studies}} in {{Epidemiology}} ({{STROBE}}) {{Statement}}},
@@ -1022,6 +1083,24 @@
   langid = {english},
   keywords = {A lire,Methodology,Observational studies},
   file = {C\:\\Users\\maxen\\Zotero\\storage\\3JLER4JD\\von Elm et al. - 2014 - The Strengthening the Reporting of Observational S.pdf}
+}
+
+@article{wang2021,
+  ids = {zotero-3770},
+  title = {Psychopathological Symptom Network Structure in Transgender and Gender Queer Youth Reporting Parental Psychological Abuse: A Network Analysis},
+  shorttitle = {Psychopathological Symptom Network Structure in Transgender and Gender Queer Youth Reporting Parental Psychological Abuse},
+  author = {Wang, Yuanyuan and Ma, Zhihao and Wilson, Amanda and Hu, Zhishan and Ying, Xin and Han, Meng and Cui, Zaixu and Chen, Runsen},
+  year = {2021},
+  month = sep,
+  journal = {BMC Medicine},
+  volume = {19},
+  number = {1},
+  pages = {215},
+  issn = {1741-7015},
+  doi = {10.1186/s12916-021-02091-5},
+  abstract = {This is the first study to investigate the effect of parental psychological abuse on potential psychopathological symptoms in gender minority youth subgroups, including transgender women, transgender men, and gender queer individuals.},
+  keywords = {Childhood neglect/abuse,Network analysis,Nonbinary,Researcher App,Transgender men,Transgender people,Transgender women,Transgender youth,Violence},
+  file = {C\:\\Users\\maxen\\Zotero\\storage\\YARRIU9C\\Wang et al. - 2021 - Psychopathological symptom network structure in tr.pdf;C\:\\Users\\maxen\\Zotero\\storage\\DYMHRQ2B\\s12916-021-02091-5.html}
 }
 
 @article{wirtz2020,
