--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -18,7 +18,7 @@ Parmi les 71 patient·e·s que j'ai déjà vu·e·s au moins une fois en consult
 knitr::include_graphics('files/sample_flowchart.png')
 ```
 
-```{r flowchart, fig.align='center', fig.cap= 'Diagramme de flux présentant la sélection des patient·e·s pour le TFE', echo=FALSE, out.width = '80%', eval = knitr::is_html_output()}
+```{r flowchart, fig.align='center', fig.cap= 'Diagramme de flux présentant la sélection des patient·e·s pour le TFE', echo=FALSE, out.width = '95%', eval = knitr::is_html_output()}
 
 knitr::include_graphics('files/sample_flowchart.png', dpi = 300)
 ```
@@ -111,7 +111,7 @@ Afin de mieux cerner les attentes des patient·e·s et de leur proposer un trait
 
 Pour les personnes transféminines, les effets les plus souvent mentionnés comme prioritaires étaient : une majoration de la poitrine (`r .p_prio_poit` des patient·e·s), une répartition plus féminine des graisses (`r .p_prio_gras_F`), une diminution de la pilosité (`r .p_prio_pilo_F`), et un arrêt de la progression de l'alopécie androgénique (`r .p_prio_alo`). Un·e patient·e avait mentionné l'adoucissement de la peau tandis qu'aucun·e patient·e n'avait explicitement évoqué la diminution des érections spontanées ou la diminution de la masse musculaire comme étant une priorité.
 
-Pour les personnes transmasculines, l'aggravation de la voix était l'effet le plus souvent recherché. Il s'agissait d'une priorité pour `r .p_prio_voix` des patient·e·s. Une répartition plus masculine des graisses et une majoration de la musculature étaient une priorité pour `r .p_prio_gras_M` des patient·e·s. `r .p_prio_pilo_M` des patient·e·s considéraient la majoration de leur pilosité comme une priorité tandis qu'un·e des patient·e·s avait mentionné l'accroissement du dickclit. Aucun·e n'avait cité l'aménorrhée comme étant sa priorité à l'initiation du THAG.
+Pour les personnes transmasculines, l'aggravation de la voix était l'effet le plus souvent recherché. Il s'agissait d'une priorité pour `r .p_prio_voix` des patient·e·s et du seul effet attendu pour `r .N_voix_seul`. Une répartition plus masculine des graisses et une majoration de la musculature étaient une priorité pour `r .p_prio_gras_M` des patient·e·s. `r .p_prio_pilo_M` des patient·e·s considéraient la majoration de leur pilosité comme une priorité tandis qu'un·e des patient·e·s avait mentionné l'accroissement du dickclit. Aucun·e n'avait cité l'aménorrhée comme étant sa priorité à l'initiation du THAG.
 
 Au niveau des inquiétudes vis-à-vis de l'instauration du THAG, deux patient·e·s ont mentionné l'alopécie, un·e patient·e a évoqué l'acné, et un·e patient·e avait peur d'avoir une humeur plus instable à l'instauration du traitement.
 
@@ -159,7 +159,7 @@ knitr::include_graphics('output/plots/sankey_plot.png')
 
 Vu le point de controverse sur les antiandrogènes, j'ai souhaité comparer les valeurs de laboratoire des patient·e·s en fonction du traitement qu'iels prenaient. La figure \@ref(fig:OutcomePlotF) propose une représentation graphique de l'évolution de l'axe hypothalamo-hypophyso-gonadique (HHG) tandis que le tableau \@ref(tab:OutcomeTableF) présente les médianes des valeurs tensionnelles et des paramètres de laboratoire mesurés au fil des consultations. Pour le graphique, les valeurs de T2 d'un·e patient·e ont été exclues de l'analyse en raison d'un oubli de prise de traitement de sa part, ce qui donnait une image erronée de l'évolution, vu le faible échantillon. En outre, deux patient·e·s ont raté leur rendez-vous trimestriel, l'une à T1 et l'autre à T2. En raison de la petitesse de l'échantillon, les valeurs présentées doivent être prises avec prudence.
 
-La figure \@ref(fig:OutcomePlotF) se divise en quatre panneaux représentant quatre angles différents de l'axe HHG, eux-mêmes divisés en trois graphiques, selon l'antiandrogène. Pour chaque panneau, on retrouve les valeurs individuelles de T~s~ sous formes de points, avec un code couleur selon qu'elles correspondent ou non aux valeurs-cibles. Travaillant majoritairement avec le laboratoire de la Citadelle, j'ai choisi leur cutoff de 2,29nmol/L pour la T~s~ maximale chez les femmes cisgenres. Les barres représentent la valeur médiane du paramètre considéré (T~s~, pour les panneaux A à C et LH pour le panneau D). Enfin, la droite de régression montre l'évolution générale des paramètres. Le panneau A montre l'évolution de la T~s~ au fil du temps. On peut constater, à la platitude des droites de régression ainsi qu'à la dispersion des valeurs individuelles que le temps ne semble pas influencer l'équilibre hormonal. Autrement dit, l'équilibre semble atteint rapidement, dès T1, et se maintenir. On notera une T~s~ médiane anormalement élevée à T2, pour le traitement par E2 seul, vraisemblablement liée aux données manquantes chez deux patient·e·s à ce moment. D'autres soucis de compliance thérapeutique ne sont pas à exclure, vu l'E2~s~ plus faible également (voir tableau \@ref(tab:OutcomeTableF)). De plus, si la Spironolactone ne semble pas contribuer à abaisser la T~s~ de manière plus marquée que l'E2 seul, le Depo-Eligard est le seul traitement pour lequel toutes les valeurs de T~s~ sont sous le cutoff. À noter que les patient·e·s sous Spironolactone présentaient des valeurs médianes d'E2s plus faibles que les autres patient·e·s. Mon hypothèse actuelle réside en une application suboptimale du gel chez deux des trois patient·e·s mais ne pourra être confirmée d'ici la publication de ce TFE. Les graphiques du panneau B suggèrent une indépendance entre l'E2~s~ et la T~s~, ce qui est surprenant. Pour creuser davantage cette relation, le panneau C montre le lien entre T~s~ et LH tandis que le panneau D, entre LH et E2~s~. Pris ensemble, ces deux panneaux permettent de mieux comprendre les liens entre E2~s~et T~s~. En effet, la T~s~ est clairement influencée par la concentration sérique de LH, avec une valeur-seuil à partir de laquelle la production de T n'est plus inhibée. La supériorité du Depo-Eligard peut alors se comprendre par son action directe sur la LH et les valeurs continuellement inférieures au seuil de LH. La Spironolactone, de son côté, ne semble pas influer sur les concentrations en LH. En outre, la LH diminue tandis que l'E2~s~ augmente, mais les valeurs cibles de 100-200ng/L recommandées dans la littérature semblent insuffisantes pour passer sous le seuil, pour la majorité des patient·e·s. Le lien entre T~s~ et E2~s~ étant donc indirect et passant par l'inhibition de la LH, les concentrations seules d'E2~s~ ne permettent pas, dans cet échantillon limité, de prédire la T~s~ tout en l'influençant néanmoins.
+La figure \@ref(fig:OutcomePlotF) se divise en quatre panneaux représentant quatre angles différents de l'axe HHG, eux-mêmes divisés en trois graphiques, selon l'antiandrogène. Pour chaque panneau, on retrouve les valeurs individuelles de T~s~ sous formes de points, avec un code couleur selon qu'elles correspondent ou non aux valeurs-cibles. Travaillant majoritairement avec le laboratoire de la Citadelle, j'ai choisi leur cutoff de 2,29nmol/L pour la T~s~ maximale chez les femmes cisgenres. Les barres représentent la valeur médiane du paramètre considéré (T~s~, pour les panneaux A à C et LH pour le panneau D). Enfin, la droite de régression montre l'évolution générale des paramètres. Le panneau A montre l'évolution de la T~s~ au fil du temps. On peut constater, à la platitude des droites de régression ainsi qu'à la dispersion des valeurs individuelles que le temps ne semble pas influencer l'équilibre hormonal. Autrement dit, l'équilibre semble atteint rapidement, dès T1, et se maintenir. On notera une T~s~ médiane anormalement élevée à T2, pour le traitement par E2 seul, vraisemblablement liée aux données manquantes chez deux patient·e·s à ce moment. D'autres soucis de compliance thérapeutique ne sont pas à exclure, vu l'E2~s~ plus faible également (voir tableau \@ref(tab:OutcomeTableF)). De plus, si la Spironolactone ne semble pas contribuer à abaisser la T~s~ de manière plus marquée que l'E2 seul, le Depo-Eligard est le seul traitement pour lequel toutes les valeurs de T~s~ sont sous le cutoff. À noter que les patient·e·s sous Spironolactone présentaient des valeurs médianes d'E2s plus faibles que les autres patient·e·s. Les graphiques du panneau B suggèrent une indépendance entre l'E2~s~ et la T~s~, ce qui est surprenant. Pour creuser davantage cette relation, le panneau C montre le lien entre T~s~ et LH tandis que le panneau D, entre LH et E2~s~. Pris ensemble, ces deux panneaux permettent de mieux comprendre les liens entre E2~s~et T~s~. En effet, la T~s~ est clairement influencée par la concentration sérique de LH, avec une valeur-seuil à partir de laquelle la production de T n'est plus inhibée. La supériorité du Depo-Eligard peut alors se comprendre par son action directe sur la LH et les valeurs continuellement inférieures au seuil de LH. La Spironolactone, de son côté, ne semble pas influer sur les concentrations en LH. En outre, la LH diminue tandis que l'E2~s~ augmente, mais les valeurs cibles de 100-200ng/L recommandées dans la littérature semblent insuffisantes pour passer sous le seuil, pour la majorité des patient·e·s. Le lien entre T~s~ et E2~s~ étant donc indirect et passant par l'inhibition de la LH, les concentrations seules d'E2~s~ ne permettent pas, dans cet échantillon limité, de prédire la T~s~ tout en l'influençant néanmoins.
 
 ```{r OutcomePlotF, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transféminin·e·s", fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
 
@@ -205,7 +205,7 @@ source('scripts/plots/create_sankey_plot.R', encoding = 'UTF-8')
 
 La totalité des patient·e·s de l'échantillon était sous Sustanon, à l'exception d'un patient qui a préféré passer au Nebido pour limiter le nombre d'injections. La posologie du Sustanon était d'une injection toutes les trois semaines, hormis pour deux patient·e·s. Le premier est passé à une injection tous les quinze jours en raison d'un manque d'énergie dans les derniers jours précédant l'injection. Ce sentiment était corrélé à une T~s~ inférieure aux valeurs-cibles à ce moment (10,26nmol/L). Dans l'autre cas, l'intervalle a été augmenté à 28 jours à cause d'une majoration excessive de l'hématocrite. Le coût annuel du traitement s'étendait de `r .min_cout_M`€ pour le Sustanon injecté toutes les quatre semaines à `r .max_cout_M`€ pour le Nebido injecté toutes les 12 semaines (coût annuel médian : `r .med_cout_M`€).
 
-#### Évolution de l'axe hypothalamo-hypophyso-gonadique
+#### Évolution des valeurs de laboratoire
 
 ```{r include=FALSE}
 source('scripts/data_manipulation/wilcoxon.R', encoding = 'UTF-8')
@@ -213,7 +213,7 @@ source('scripts/data_manipulation/wilcoxon.R', encoding = 'UTF-8')
 
 Étant donné l'homogénéité des traitements, aucune analyse spécifique n'a été conduite en fonction du type d'androgène utilisé. Les données de deux patient·e·s sont manquantes en raison de consultations non honorées à T1 et T3. En outre, les valeurs de deux patient·e·s ont été exclues du graphique à T1 et T3 en raison d'une prise de sang réalisée \< 24h après l'injection, entraînant un pic de T~s~ qui les rendait ininterprétables.
 
-De manière similaire à ce qui a été présenté plus haut, la figure \@ref(fig:OutcomePlotM) se divise en 4 panneaux, ceux-ci mesurant désormais l'évolution de la T~s~ en fonction du temps (A), l'évolution de l'E2~s~ en fonction de la T~s~ (B), l'évolution de la FSH en fonction de l'E2~s~ (C), ainsi que l'évolution de la FSH en fonction de la T~s~ (D). Les mêmes éléments graphiques et couleurs ont été utilisés, avec des valeurs cibles de 14-24nmol/L pour la Ts. Comme pour les patient·e·s transféminin·e·s, on ne remarque pas d'influence du temps sur la T~s~, ce qui suggère, une fois encore, que l'équilibre hormonal est rapidement atteint et n'évolue plus, à posologie identique. De manière surprenante, l'E2~s~ n'est pas influencée par la T~s~. En analysant plus en détail l'axe HHG, on peut constater une relation inversement proportionnelle entre FSH et E2~s~ ainsi qu'entre FSH et testostérone sérique. L'explication de ces résultats nécessite un détour théorique sur le rétrocontrôle de l'axe HHG et sera donc développée dans la discussion. Au niveau des autres valeurs de laboratoire, le nombre de patient·e·s n'étant pas divisé entre de multiples traitement, l'effectif était suffisant pour un test statistique comparant les valeurs à T0 et celles à T1. Ces résultats doivent toutefois être interprétés avec prudence vu la taille de l'échantillon. Un test des rangs signés de Wilcoxon a permis de déterminer que la majoration de l'hémoglobinémie et de l'hématocrite étaient statistiquement significative (`r scales::pvalue(.Hb_Wil$p.value, accuracy = 0.01, add_p = T)` pour les deux). En ce qui concerne le bilan lipidique, seule la diminution du HDL-C était significative (`r scales::pvalue(.Hb_Wil$p.value, accuracy = 0.01, add_p = T)`). Enfin, l'augmentation des transaminases hépatiques était également significative (`r scales::pvalue(.TGO_Wil$p.value, accuracy = 0.01, add_p = T)` et `r scales::pvalue(.TGP_Wil$p.value, accuracy = 0.01, add_p = T)` pour TGO et TGP, respectivement). Les différentes valeurs se retrouvent dans la table \@ref(tab:OutcomeTableM).
+De manière similaire à ce qui a été présenté plus haut, la figure \@ref(fig:OutcomePlotM) se divise en 4 panneaux, ceux-ci mesurant désormais l'évolution de la T~s~ en fonction du temps (A), l'évolution de l'E2~s~ en fonction de la T~s~ (B), l'évolution de la FSH en fonction de l'E2~s~ (C), ainsi que l'évolution de la FSH en fonction de la T~s~ (D). Les mêmes éléments graphiques et couleurs ont été utilisés, avec des valeurs cibles de 14-24nmol/L pour la Ts. Comme pour les patient·e·s transféminin·e·s, on ne remarque pas d'influence du temps sur la T~s~, ce qui suggère, une fois encore, que l'équilibre hormonal est rapidement atteint et n'évolue plus, à posologie identique. De manière surprenante, l'E2~s~ n'est pas influencée par la T~s~. En analysant plus en détail l'axe HHG, on peut constater une relation inversement proportionnelle entre FSH et E2~s~ ainsi qu'entre FSH et testostérone sérique. L'explication de ces résultats nécessite un détour théorique sur le rétrocontrôle de l'axe HHG et sera donc développée dans la discussion. Au niveau des autres valeurs de laboratoire, le nombre de patient·e·s n'étant pas divisé entre de multiples traitement, l'effectif était suffisant pour un test statistique comparant les valeurs à T0 et celles à T1. Ces résultats doivent toutefois être interprétés avec prudence vu la taille de l'échantillon. Un test des rangs signés de Wilcoxon a permis de déterminer que la majoration de l'hémoglobinémie et de l'hématocrite étaient statistiquement significative (`r scales::pvalue(.Hb_Wil$p.value, accuracy = 0.05, add_p = T)` pour les deux), de même que l'augmentation de la créatinine `r scales::pvalue(.creat_Wil$p.value, accuracy = 0.05, add_p =T)`. En ce qui concerne le bilan lipidique, seule la diminution du HDL-C était significative (`r scales::pvalue(.Hb_Wil$p.value, accuracy = 0.05, add_p = T)`). Enfin, l'augmentation des transaminases hépatiques était également significative (`r scales::pvalue(.TGO_Wil$p.value, accuracy = 0.05, add_p = T)` et `r scales::pvalue(.TGP_Wil$p.value, accuracy = 0.05, add_p = T)` pour TGO et TGP, respectivement). Les différentes valeurs se retrouvent dans la table \@ref(tab:OutcomeTableM).
 
 ```{r OutcomePlotM, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transmasculin·e·s", fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
 
