--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -1,6 +1,6 @@
 # (PART) Annexes
 
-## Guide de codage des données qualitatives {#guide-de-codage-des-données-subjectives}
+# Guide de codage des données qualitatives {#guide-de-codage-des-données-subjectives}
 
 Afin d'extraire les données subjectives des notes médicales, un guide d'extraction et de codages des variables a été développé au préalable. Ce guide a ensuite été testé et affiné jusqu'à sa version définitive ayant permis la réalisation de ce TFE.
 
@@ -12,23 +12,23 @@ Les données collectées correspondent aux thématiques abordées lors de l'anam
 
 3.  Les aspects chirurgicaux
 
-### Aspects sociaux {#aspects-sociaux}
+## Aspects sociaux {#aspects-sociaux}
 
-#### Famille
+### Famille
 
 -   *Personnes au courant :* personne (0) ; mère seulement (1) ; père seulement (2) ; les deux parents ou le seul parent en vie (3) ; les parents et la majorité de la famille (4) ; quelques membres de la famille, mais pas les parents (5) ; toute la famille (6)
 
 -   *Réaction initiale :* réaction négative (0) ; quelques difficultés (1) ; réaction neutre (2) ; réaction globalement positive (3)
 
-#### Amis
+### Amis
 
 -   *Personnes au courant :* personne (0) ; uniquement les amis proches (1) ; la plupart des amis (2) ; tous ou presque (3)
 
 -   *Réaction initiale :* réaction hostile (0) ; quelques difficultés (1) ; réaction neutre (2) ; réaction globalement positive (3)
 
-### Aspects hormonaux {#aspects-hormonaux}
+## Aspects hormonaux {#aspects-hormonaux}
 
-#### Effets les plus attendus
+### Effets les plus attendus
 
 Variables binaires codées (1) si l'effet a été mentionné explicitement comme une priorité pour le point de confort du/de la patient(e) et (0) dans le cas contraire. Chaque variable correspond à un des effets principaux du THAG, soit :
 
@@ -36,15 +36,15 @@ Variables binaires codées (1) si l'effet a été mentionné explicitement comme
 
 -   Pour les hommes transgenres et autres personnes transmasculines, l'aggravation de la voix, l'aménorrhée, la majoration de la pilosité, la répartition plus masculine des graisses, le développement de la musculature, et le développement d'un dickclit.
 
-#### Inquiétudes vis-à-vis du traitement
+### Inquiétudes vis-à-vis du traitement
 
 Variables binaires codées (1) si cet effet inquiète le patient ou (0) dans le cas contraire.
 
-#### Cryopréservation des gamètes
+### Cryopréservation des gamètes
 
 Variable correspondant à la réalisation d'une cryopréservation des gamètes avant l'introduction du THAG : non réalisée (0) démarches effectuées (1)
 
-### Aspects chirurgicaux {#aspects-chirurgicaux}
+## Aspects chirurgicaux {#aspects-chirurgicaux}
 
 Pour chaque chirurgie couramment envisagée : n'a pas exprimé de réaliser l'opération (0) ; ne sait pas (1) ; besoin identifié (2).
 
@@ -54,17 +54,17 @@ Ces chirurgies sont :
 
 -   Pour les hommes transgenres et autres personnes transmasculines : la torsoplastie, l'hystérectomie, la phalloplastie, et la métaidoïoplastie
 
-## Recommandations pratiques pour l'initiation du THAG
+# Recommandations pratiques pour l'initiation du THAG
 
 Ces fiches ont initialement été publiées sur le site internet de [PraTIQ](http://pratiq.be/).
 
-### Compétences culturelles
+## Compétences culturelles
 
 Il est important de créer un cadre bienveillant et sécurisant pour les patient·e·s. Cela passe par le respect des pronoms et du prénom social, peu importe les changements administratifs réalisés. De plus, il est important de ne pas poser de questions intrusives sur la chirurgie ou les organes génitaux. Si l'information est cliniquement pertinente, il faut prendre le temps d'expliquer aux patient·e·s pourquoi on pose la question. Enfin, il faut est nécessaire de s'aligner sur le vocabulaire employé par les patient·e·s pour décrire leur propre corps et leurs propres expériences. Par exemple, si un patient est plus à l'aise de parler de son torse plutôt que de sa poitrine, le médecin devrait employer le même terme afin de ne pas générer un inconfort, et ce peu importe qu'il y ait eu opération ou non. De manière générale, les termes trop connotés au niveau du genre (p. ex. vagin, pénis) devraient être remplacés par des termes plus neutres (p. ex. sexe, organes génitaux).
 
-### THAG masculinisant
+## THAG masculinisant
 
-#### Quels sont les effets du THAG masculinisant ?
+### Quels sont les effets du THAG masculinisant ?
 
 La figure \@ref(fig:EffetsTHAGM) donne une estimation générale des effets principaux du THAG masculinisant ainsi que de l'apparition attendue des effets. Le timing exact est hautement variable d'une personne à l'autre.
 
@@ -78,13 +78,13 @@ knitr::include_graphics('files/effets_THAG_M.png')
 knitr::include_graphics('files/effets_THAG_M.png', dpi = 300)
 ```
 
-#### Que vérifier avant instauration du THAG ?
+### Que vérifier avant instauration du THAG ?
 
 1.  Informer le patient sur l'impact partiellement réversible sur la fertilité et proposer des options de cryopréservation des ovocytes
 
 2.  Si cliniquement pertinent, dépister les conditions pouvant potentiellement s'aggraver et les contrôler avant initiation du traitement : hypertension artérielle, syndrome d'apnée/hypopnée du sommeil, polycythémie, insuffisance cardiaque congestive, coronaropathie instable.
 
-#### Quel bilan initial réaliser ?
+### Quel bilan initial réaliser ?
 
 En l'absence d'éléments particuliers à l'anamnèse qui pourraient inciter à demander des examens complémentaires, notamment pour exclure une pathologie qui pourrait évoluer péjorativement sous supplémentation androgénique, une prise de sang est généralement suffisante.
 
@@ -100,7 +100,7 @@ En l'absence d'éléments particuliers à l'anamnèse qui pourraient inciter à 
 
 -   En dehors de ça, un recueil de la tension artérielle ainsi que du poids se justifie afin de les monitorer au long du traitement.
 
-#### Quel traitement prescrire ?
+### Quel traitement prescrire ?
 
 Le Sustanon est généralement le premier choix, en raison de son faible coût (10,56€ par ampoule pouvant faire l'objet d'un remboursement partiel via un endocrinologue). La posologie de base est d'une ampoule en intramusculaire toutes les 3 semaines, l'intervalle pouvant être ajusté entre 2 et 4 semaines selon le monitoring. Son désavantage principal, outre la répétition d'injections pouvant être douloureuses, réside dans les pics de testostérone dans les 48-72h post-injection et les vallées peu avant l'injection suivante.
 
@@ -108,7 +108,7 @@ Le Nebido est un autre ester de testostérone s'injectant par voie intramusculai
 
 L'Androgel ou Testarzon sont deux testostérones s'administrant par voie transdermique, à la posologie de 20 à 80mg/J, selon la prise de sang et la satisfaction clinique du patient. Ils ont l'avantage de ne pas nécessiter d'injection, mais doivent être appliqués quotidiennement, avec un risque théorique de transfert aux proches. Les concentrations sanguines sont stables mais généralement plus faibles qu'avec les formes injectables, ce qui peut rendre l'aménorrhée plus difficile à atteindre. Enfin, il s'agit de produits onéreux (51,16€ par flacon pour le Testarzon, soit entre 25€ et 100€ par mois environ selon la posologie nécessaire). Il peut en outre s'agir d'une option intéressante pour les personnes désirant commencer avec des microdosages, dans la mesure où sa posologie peut être plus finement contrôlée que via les injections et sans générer de gaspillage de moitié d'ampoule.
 
-#### Quel monitoring envisager ?
+### Quel monitoring envisager ?
 
 La première année, un monitoring trimestriel est de mise afin de s'assurer du bien-être du patient, d'ajuster l'intervalle entre deux injections ou la posologie du gel. Par la suite, un contrôle 1 à 2 fois par an suffit.
 
@@ -126,7 +126,7 @@ La première année, un monitoring trimestriel est de mise afin de s'assurer du 
 
 -   Si mastectomie, encourager quand même une (auto-)palpation sous- et péri-aréolaire, le risque de cancer du sein devenant très faible, mais non nul. Si la poitrine est toujours présente, dépistage du cancer du sein selon les guidelines classiques
 
-#### Quelle sécurité sur le long terme ?
+### Quelle sécurité sur le long terme ?
 
 -   La plupart des études ne retrouvent pas d'effet sur la résistance à l'insuline ou la glycémie à jeun
 
@@ -148,7 +148,7 @@ La première année, un monitoring trimestriel est de mise afin de s'assurer du 
 
 -   Densité osseuse stable ou majorée après initiation de la THAG, mais perte osseuse en cas de supplémentation insuffisante après ovariectomie
 
-#### Quelle contraception proposer ?
+### Quelle contraception proposer ?
 
 On retrouve une anovulation liée à une suppression de l'axe hypothalamo-hypophyso-gonadique chez une partie des patient·e·s, mais des phénomènes d'échappement peuvent survenir par la suite, ce qui induit la nécessité d'une méthode contraceptive, si les pratiques sexuelles du patient le justifient
 
@@ -166,9 +166,9 @@ On retrouve une anovulation liée à une suppression de l'axe hypothalamo-hypoph
 
 \newpage
 
-### THAG féminisant
+## THAG féminisant
 
-#### Que faut-il vérifier avant l'instauration du traitement ?
+### Que faut-il vérifier avant l'instauration du traitement ?
 
 -   Informer les patient·e·s de l'impact potentiellement irréversible et rapide sur la fertilité et discuter des options de cryopréservation des gamètes
 
@@ -184,7 +184,7 @@ On retrouve une anovulation liée à une suppression de l'axe hypothalamo-hypoph
 
     -   Lithiase vésiculaire
 
-#### Quels sont les effets du THAG féminisant ?
+### Quels sont les effets du THAG féminisant ?
 
 La figure \@ref(fig:EffetsTHAGF) donne une estimation générale des effets principaux du THAG masculinisant ainsi que de l'apparition attendue des effets. Le timing exact est hautement variable d'une personne à l'autre.
 
@@ -198,7 +198,7 @@ knitr::include_graphics('files/effets_THAG_F.png')
 knitr::include_graphics('files/effets_THAG_F.png', dpi = 300)
 ```
 
-#### Quel bilan initial réaliser ?
+### Quel bilan initial réaliser ?
 
 En l'absence d'éléments particuliers à l'anamnèse qui pourraient inciter à demander des examens complémentaires, notamment pour exclure une pathologie qui pourrait évoluer péjorativement sous supplémentation œstrogénique, une prise de sang est généralement suffisante.
 
@@ -214,7 +214,7 @@ En l'absence d'éléments particuliers à l'anamnèse qui pourraient inciter à 
 
 -   En dehors de ça, un recueil de la tension artérielle ainsi que du poids se justifient afin de les monitorer au long du traitement.
 
-#### Quel traitement prescrire ?
+### Quel traitement prescrire ?
 
 La base du THAG féminisant se compose d'œstradiol afin d'obtenir les effets féminisants (pousse de la poitrine, répartition des graisses, assouplissement de la peau). L'œstradiol seul peut suffire à diminuer la testostérone jusqu'à lui faire atteindre les valeurs d'une femme cisgenre, mais cela n'est pas le cas la plupart du temps. L'ajout d'un antiandrogène doit se faire en concertation avec la patiente, en expliquant les effets indésirables potentiels et en les mettant en balance avec les effets désirables pour la patiente. En effet, une partie des effets du traitement hormonal (diminution de la pilosité, diminution des érections spontanées, arrêt de la perte des cheveux et diminution de la masse musculaire) sont liés aux concentrations en testostérone et non à celles en œstradiol. Selon les valeurs, les préférences et le point de confort de la patiente, l'ajout d'un antiandrogène peut se justifier d'emblée ou par la suite du suivi en l'absence d'une suppression satisfaisante de la testostéronémie chez une patiente accordant une importance plus forte aux effets liés à la testostérone. L'impact de la testostérone sur la pousse de la poitrine n'est pas clairement établi, mais un effet négatif semble plausible.\
 La progestérone micronisée est parfois utilisée en raison de reports anecdotiques sur une meilleure forme de la poitrine. Néanmoins, cet effet n'a pas encore été scientifiquement étudié et aucune preuve formelle n'existe dans un sens ou l'autre. Il est à noter qu'il existe un risque de réduire l'accroissement mammaire si pris au début de la pousse de la poitrine (dans les 12 à 24 premiers mois) et qu'un risque accru de TVP et d'AVC a été mis en évidence chez les femmes cisgenres qui prenaient des progestatifs en plus de l'œstradiol comme traitement substitutif à la ménopause.
@@ -240,7 +240,7 @@ En termes de traitement antiandrogénique, 4 options principales existent
 
 Un traitement antiandrogénique n'a évidemment aucun intérêt après orchidectomie, si la patiente a choisi de réaliser cette intervention.
 
-#### Quelle sécurité sur le long terme ?
+### Quelle sécurité sur le long terme ?
 
 -   Majoration des triglycérides, mais pas d'impact sur le cholestérol
 
@@ -262,7 +262,7 @@ Un traitement antiandrogénique n'a évidemment aucun intérêt après orchidect
 
 -   Densité minérale osseuse préservée sous œstrogènes
 
-#### Quel monitoring envisager ?
+### Quel monitoring envisager ?
 
 La première année, un monitoring trimestriel est de mise afin de s'assurer du bien-être de la patiente, d'ajuster la posologie du traitement et l'ajout éventuel d'un antiandrogène, selon les besoins et désirs de la patiente.
 
